--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "^14.2.31",
     "next-auth": "^4.24.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
