--- a/package.json
+++ b/package.json
@@ -11,13 +11,22 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.4.1",
     "@prisma/client": "^6.13.0",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.540.0",
     "next": "^14.2.31",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
@@ -31,6 +40,6 @@
     "postcss": "^8.5.6",
     "prisma": "^6.13.0",
     "tailwindcss": "^3.4.17",
-    "typescript": "5.9.2"
+    "typescript": "^5.9.2"
   }
 }
