--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.540.0",
     "next": "^15.4.7",
-    "next-auth": "^4.24.7",
+    "next-auth": "^4.24.11",
+    "nodemailer": "^7.0.6",
     "pg": "^8.16.3",
     "react": "^19.1.1",
     "react-day-picker": "^9.9.0",
