--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "gantt-task-react": "^0.3.9",
     "lucide-react": "^0.540.0",
     "next": "^15.4.7",
     "next-auth": "^4.24.11",
