--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-router-dom": "^7.8.2",
     "recharts": "^3.1.2",
     "recharts-to-png": "^3.0.1",
+    "resend": "^6.1.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
