--- a/package.json
+++ b/package.json
@@ -65,6 +65,8 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
+    "xlsx": "^0.18.5",
+    "xlsx-js-style": "^1.2.0",
     "zod": "^4.1.11",
     "zustand": "^5.0.8"
   },
@@ -74,6 +76,7 @@
     "@types/node": "^20",
     "@types/react": "18.3.23",
     "@types/react-dom": "^18",
+    "@types/xlsx": "^0.0.35",
     "autoprefixer": "^10.4.21",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
