--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "date-fns": "^4.1.0",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.23.24",
     "gantt-task-react": "^0.3.9",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.540.0",
